--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       background-color: hsl(0, 0%, 100%);
     }
     .left {
-      width: 250px;
-      height: 350px;
+      width: 300px;
+      height: 450px;
       background: url(images/image-product-desktop.jpg) no-repeat;
       background-position: center;
       background-size: cover;
@@ -46,7 +46,7 @@
       padding: .5rem 2rem;
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
+      justify-content: space-around;
       box-sizing: border-box;
     }
     .right span {
